--- a/src/styles/base/settings.scss
+++ b/src/styles/base/settings.scss
@@ -1,11 +1,11 @@
 // Colors
-$dark: #212936;
+$dark: #313131;
 
-$light: #303c50;
-
+$light: #414141;
+$more-light: #525252;
 $dark-white: #efefef;
 
-$highlight: #4A407C;
+$highlight: #b63e48;
 $highlight-2: #c08ac0;
 
 $black: #080a09;
