--- a/src/styles/components/_MatchDetail.scss
+++ b/src/styles/components/_MatchDetail.scss
@@ -1,3 +1,12 @@
 .char-icon {
   width: 5rem;
 }
+
+.player{
+  width: fit-content;
+}
+.setlink {
+  background-color: $light;
+  padding: 1rem;
+  margin: 0rem;
+}
