--- a/src/styles/base/settings.scss
+++ b/src/styles/base/settings.scss
@@ -1,11 +1,12 @@
 // Colors
-$dark: #313131;
+$dark: #0C0E13;
 
-$light: #414141;
-$more-light: #525252;
+$light: #13151B;
+$more-light: #181A20;
 $dark-white: #efefef;
 
-$highlight: #b63e48;
+// $highlight: #b63e48;
+$highlight: #f13932;
 $highlight-2: #c08ac0;
 
 $black: #080a09;
