--- a/src/styles/components/_MatchDetail.scss
+++ b/src/styles/components/_MatchDetail.scss
@@ -2,6 +2,24 @@
   width: 5rem;
 }
 
+.char-cut {
+  width: 20rem;
+  border: 0.1rem solid $highlight;
+}
+
+.char-title {
+  letter-spacing: -1px;
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-style: italic;
+}
+
+.player-title {
+  letter-spacing: -1px;
+  font-style: italic;
+}
+
 .player{
   width: fit-content;
 }
@@ -9,4 +27,41 @@
   background-color: $light;
   padding: 1rem;
   margin: 0rem;
+}
+
+.vs-txt {
+  font-weight: bolder;
+  font-style: italic;
+  color: $highlight;
+}
+
+.char-list-icon {
+  width: 10rem;
+  border: 0.1rem solid $highlight;
+  transition: 0.3s;
+  border-radius: 0.3rem
+}
+
+.char-list-icon:hover {
+  background-color: rgba($highlight, .7);
+}
+
+.t-tab-overflow {
+  overflow: auto;
+}
+
+.tab-content {
+  height: 95vh;
+  overflow: auto;
+}
+
+.tab-content::-webkit-scrollbar {
+  width: 0.5rem;
+  background-color: #F5F5F5;
+}
+
+.tab-content::-webkit-scrollbar-thumb {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+  background-color: $highlight;
+  border-radius: 10px;
 }
