--- a/src/styles/base/base.scss
+++ b/src/styles/base/base.scss
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 html {
   font-size: 62.5%;
 }
 
 body {
+  font-family:  Inter, Arial, Helvetica, sans-serif;
   font-size: 1.5rem;
   background-color: $dark;
   color: $dark-white;
