--- a/src/styles/base/base.scss
+++ b/src/styles/base/base.scss
@@ -34,3 +34,10 @@ label {
 .bg-color {
   background-color: $highlight;
 }
+
+.nav-link {
+  color: white;
+}
+.nav-link:hover {
+  color: white;
+}
