--- a/src/styles/base/settings.scss
+++ b/src/styles/base/settings.scss
@@ -13,6 +13,9 @@ $black: #080a09;
 $gray: rgba(32, 33, 36, 0.9);
 $gray-light: rgba(82, 82, 82, 0.9);
 
+$smashgg: #CB333B;
+$tonamel: #F1373B;
+
 $sm: 576px;
 $md: 768px;
 $lg: 992px;
