--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,3 +3,4 @@
 @import './components/AddMatch';
 @import './components/MatchDetail';
 @import './components/TournamentDetail';
+@import './components/_MatchUpChart';
