--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,5 +2,6 @@
 @import './base/base';
 @import './components/AddMatch';
 @import './components/MatchDetail';
+@import './components/CharDetail';
 @import './components/TournamentDetail';
-@import './components/_MatchUpChart';
+@import './components/MatchUpChart';
