--- a/src/styles/components/_CharDetail.scss
+++ b/src/styles/components/_CharDetail.scss
@@ -12,6 +12,9 @@
 
 .char-detail__overlay {
   background-color:rgba($color: #000000, $alpha: 0.7);
+  background-color:linear-gradient(rgba($color: #000000, $alpha: 0.7), rgba($color: #000000, $alpha: 0.7));
+
   height: inherit;
+  
   height: 100%;
 }
